fix button on safari:change button tag to a 2

--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@
 
 button {
     border: none;
-    cursor: pointer;
 }
 
 .button {
+    cursor: pointer;
     width: 4rem;
     height: 2rem;
     display: flex;
@@ -180,6 +180,7 @@ h2 {
 #start .inner {
     width: 83%;
     height: 83%;
+    border: none;
     position: absolute;
     border-radius: 50%;
     /* margin-left: 2%; */
@@ -248,6 +249,7 @@ h2 {
     justify-content: space-evenly;
     align-items: center;
     transition: background-color 0.8s ease-in-out;
+    border: none;
 }
 
 #option:hover {
